--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,18 @@
     <title>Kakegurui Quotes</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="sakura.css">
   </head>
   <body>
-    <h1>Hello, World!</h1>
-    <p>This project is work in progress, please visit again later.</p>
-    <p><a href="https://github.com/ravener/kakegurui-quotes">GitHub</a></p>
+    <h1>Kakegurui Quotes</h1>
+    <p>Explore the sayings of the gambling addicts.</p>
+    <p><a href="https://github.com/ravener/kakegurui-quotes">GitHub</a> <a href="/api.html">API</a></p>
+    <div class="quotes"></div>
+    <blockquote>
+    <b>“</b>Testing stuff<b>”</b>
+    <p><i>- some famous person<i></p>
+    </blockquote>
+    <script src="/quotes.js"></script>
   </body>
 </html>
