--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     <p>Explore the sayings of the gambling addicts.</p>
     <p><a href="https://github.com/ravener/kakegurui-quotes">GitHub</a> <a href="/api.html">API</a></p>
     <div class="quotes"></div>
+    <hr/>
+    <p>Made by <a href="https://github.com/ravener">Ravener</a></p>
     <script src="/quotes.js"></script>
   </body>
 </html>
