feat: author thumbnails

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="sakura.css">
-    <link rel="stylesheet" href="loading.css">
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
     <h1>Kakegurui Quotes</h1>
